# mesh-geo-router

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/geo_router/workdir/: dna.yaml
dnas/geo_router/zomes/coordinator/geo_data/: Cargo.toml
dnas/geo_router/zomes/coordinator/geo_data/src/: geo_post.rs  lib.rs  user_geo_posts.rs
dnas/geo_router/zomes/integrity/geo_data/: Cargo.toml
dnas/geo_router/zomes/integrity/geo_data/src/: geo_post.rs  lib.rs
tests/: package.json
tests/src/geo_router/geo_data/: common.ts  geo-post.test.ts  user-geo-posts.test.ts
ui/: package.json  tsconfig.json
ui/src/: App.svelte  app.css
ui/src/geo_router/geo_data/: CreateGeoPost.svelte  EditGeoPost.svelte  FindLocation.svelte  GeoPostDetail.svelte  UserGeoPosts.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
