[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.4"
hdk = "=0.1.4"
serde = "=1.0.166"

[workspace.dependencies.geo_data]
path = "dnas/geo_router/zomes/coordinator/geo_data"

[workspace.dependencies.geo_data_integrity]
path = "dnas/geo_router/zomes/integrity/geo_data"
